<resources>
    <string name="app_name">MyStory App</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="message">Message</string>
    <string name="caption">Caption</string>
    <string name="add_story">Add Story</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_account">Already have account?</string>
    <string name="login">LOGIN</string>
    <string name="your_name">Your Name</string>
    <string name="register">Register</string>
    <string name="photo">Photo</string>
    <string name="list_story">List Story</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="retrofit_instance_failed">Retrofit instance failed</string>
    <string name="picture_not_found">Please enter the image file first.</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="logout">Logout</string>
    <string name="incomplete_form">Please complete the form first</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="user_name">User Name</string>
    <string name="caption_image">image description</string>
    <string name="story_photo">photo story</string>
    <string name="detail_story">Detail Story</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="caption_is_null">Please fill in the caption first</string>
    <string name="take_picture_failed">Failed to take picture.</string>
    <string name="show_camera_failed">Failed to bring up the camera.</string>
    <string name="menu_not_available">Menu Not Available</string>
    <string name="register_success">Congrats! You have registered</string>
    <string name="error_password">Must be at least 6 characters</string>
    <string name="capture_the_image_button">Capture the Image Button</string>
    <string name="switch_camera_button">Switch Camera Button</string>
    <string name="mystory_brand_logo">MystorY brand logo</string>
    <string name="one_more_step">One more step</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="register_now">Register now!</string>
    <string name="join_now">Join now</string>
    <string name="add_your_story">Add Your Story</string>
    <string name="language">Language</string>
    <string name="retry">Retry</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map">Map</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
</resources>